# Web-based_General_Finance_Assistant

./: .gitignore  OCR.py  Payments.py  README.md  Store_payments.py
langchain_project/: backend.py  backend_dump.py  pyproject.toml  test_llm.py
langchain_project/models/: __init__.py  generate.py  summary.py
langchain_project/schemas/: __init__.py  generate_schemas.py  summary_schemas.py
langchain_project/utils/: __init__.py  test_llm.py
