[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "pathlib>=1.0.1",
    "pillow>=11.2.1",
    "psycopg2>=2.9.10",
    "pytesseract>=0.3.13",
    "requests>=2.32.3",
]
